# internal/router/router.go
@@ -13,23 +13,27 @@ type Handlers struct {
 	Example     http.HandlerFunc
 	CreateUser  http.HandlerFunc
 	GetUserByID http.HandlerFunc
+	UpdateUser  http.HandlerFunc
+	DeleteUser  http.HandlerFunc
+	ListUsers   http.HandlerFunc
 }
 
 // New creates and configures a new router, injecting the handlers.
 func New(h *Handlers) *http.ServeMux {
 	mux := http.NewServeMux()
 
-	// Public routes
-	mux.HandleFunc("/login", h.Login)
-	mux.HandleFunc("POST /users", h.CreateUser) // Create a new user
+	// Create a new router for the /api/v1 prefix
+	apiV1Mux := http.NewServeMux()
+	apiV1Mux.HandleFunc("/login", h.Login)
+	apiV1Mux.Handle("/profile", protected(h.Profile))
+	apiV1Mux.Handle("/example", protected(h.Example))
 
-	// For this route, we are using the new enhanced routing patterns from Go 1.22+
-	// The {id} part is a wildcard that can be accessed in the handler.
-	mux.HandleFunc("GET /api/v1/user/{id}", h.GetUserByID)
+	// Mount the user router
+	apiV1Mux.Handle("/users/", http.StripPrefix("/users", UserRouter(h)))
 
-	// Protected routes
-	mux.Handle("/api/v1/profile", protected(h.Profile))
-	mux.Handle("/example", protected(h.Example))
+
+	// Wrap the apiV1Mux in a handler that strips the /api/v1 prefix
+	mux.Handle("/api/v1/", http.StripPrefix("/api/v1", apiV1Mux))
 
 	return mux
 }
